UtahLiveDataTest/src/objects/LEAPrivateSchoolFormItem__c.object
<CustomObject>
    <description>Ties an LEA to an application</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>LEAPrivateSchoolFormItems</relationshipLabel>
        <relationshipName>LEAPrivateSchoolFormItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEAPrivateSchool__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LEA Private School</label>
        <referenceTo>LEAPrivateSchool__c</referenceTo>
        <relationshipLabel>LEAPrivateSchoolFormItems</relationshipLabel>
        <relationshipName>LEAPrivateSchoolFormItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <formula>LEAPrivateSchool__r.LEA__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivingFundsPicklist__c</fullName>
        <label>Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted – Participating</fullName>
                </value>
                <value>
                    <fullName>Contacted – Not Participating</fullName>
                </value>
                <value>
                    <fullName>Contacted - Refused Consultation</fullName>
                </value>
                <value>
                    <fullName>Not Participating</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Participating</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USBEForm__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>USBEForm</label>
        <referenceTo>USBEForm__c</referenceTo>
        <relationshipLabel>LEAPrivateSchoolFormItems</relationshipLabel>
        <relationshipName>LEAPrivateSchoolFormItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>LEAPrivateSchoolFormItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LEAF-{00000}</displayFormat>
        <label>LEAPrivateSchoolFormItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LEAPrivateSchoolFormItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>